admission/validatingAdmissionPolicies/policies/pod-exec-create/roles/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-role-pod-exec-create.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-pod-exec-create.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-role-pod-exec-create.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-pod-exec-create.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-role-pod-exec-create.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: role-pod-exec-create-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/audit: 'false,true'
    check-role-pod-exec-create.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: role-pod-exec-create
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-role-pod-exec-create.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
