admission/validatingAdmissionPolicies/policies/pod-exec-create/roles/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: role-pod-exec-create
  annotations:
    security.kubeapt.io/displayName: 'Pod Exec Create'
    security.kubeapt.io/description: Roles must not allow pod creation/modification or exec/attach/portforward/ephemeralcontainers
    security.kubeapt.io/resource: Roles
    security.kubeapt.io/severity: "9"
    security.kubeapt.io/remediation: "Remove pod write verbs and exec/attach/portforward/ephemeralcontainers create permissions. Fields: rules[*].apiGroups, rules[*].resources, rules[*].verbs."
    policies.kolteq.com/validatingAdmissionPolicy: d0d61a51-5e95-56ee-9432-00a6a8c2cd68
  labels:
    check-role-pod-exec-create.security.kolteq.com/audit: 'false-true'
    check-role-pod-exec-create.security.kolteq.com/enforce: 'false-true'
    check-role-pod-exec-create.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - roles
  variables:
  - name: podWriteVerbs
    expression: |
      ["create","update","patch","delete"]
  - name: execResources
    expression: |
      ["pods/exec","pods/attach","pods/portforward","pods/ephemeralcontainers"]
  validations:
  - expression: |
      !has(object.rules) || object.rules.all(r,
        !(
          (r.apiGroups.exists(ag, ag == "") &&
           r.resources.exists(res, res == "pods") &&
           r.verbs.exists(v, variables.podWriteVerbs.exists(pv, pv == v)))
          ||
          (r.apiGroups.exists(ag, ag == "") &&
           r.resources.exists(res, variables.execResources.exists(er, er == res)) &&
           r.verbs.exists(v, v == "create"))
        )
      )
    message: |
      Roles must not allow pod creation/modification or exec/attach/portforward/ephemeralcontainers access.
